# panda3d-render-pass

./: .pylintrc  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/: main.workflow
.github/actions/poetry/: Dockerfile
panda3d_render_pass/: __init__.py  renderpass.py
samples/roaming-ralph/: main.py
samples/roaming-ralph/shaders/: basic.vert  fsq.frag  fsq.vert  light.frag  light.vert  model.frag  model.vert  position.frag
tests/: test_panda3d_render_pass.py  test_panda3d_render_pass_node.py
