[tool.poetry]
name = "panda3d-render-pass-node"
version = "0.1.0"
description = "A Panda3D node to simplify setting up multi-pass rendering systems"
authors = ["Daniel Stokes <kupomail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
