[tool.poetry]
name = "panda3d-render-pass"
version = "0.1.0"
description = "A Panda3D utility to simplify setting up multi-pass rendering systems"
authors = ["Daniel Stokes <kupomail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
panda3d = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
